--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> <!-- Add this line -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://omgaikwad26.github.io; style-src 'self'; img-src 'self'">
+
 
     <meta
       name="description"
